--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="container" >
-        <div id="content">
+        <div id="content text-cente">
          {% block content %}
          <h1>You may now login</h1><br>
          <form action="" method="post">
